
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <ImageView
                style="@style/imageViewStyle"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:maxHeight="64dp"
                android:src="@drawable/portee" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/question_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/imageQuestionViewStyle"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ue_flag" />

                    <RadioGroup
                        android:id="@+id/radio_group_question_1"
                        style="@style/radioGroupStyle"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_1_answer_1" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_1_answer_2" />

                        <RadioButton
                            android:id="@+id/question_1_answer_3_correct"
                            style="@style/radioButtonStyle"
                            android:text="@string/question_1_answer_3" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_1_answer_4" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/question_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/imageQuestionViewStyle"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/amerindiens" />

                    <RadioGroup
                        android:id="@+id/radio_group_question_2"
                        style="@style/radioGroupStyle"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_2_answer_1" />

                        <RadioButton
                            android:id="@+id/question_2_answer_2_correct"
                            style="@style/radioButtonStyle"
                            android:text="@string/question_2_answer_2" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_2_answer_3" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_2_answer_4" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/question_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/imageQuestionViewStyle"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/rockstar" />

                    <RadioGroup
                        android:id="@+id/radio_group_question_3"
                        style="@style/radioGroupStyle"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_3_answer_1" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:id="@+id/question_3_answer_2_correct"
                            android:text="@string/question_3_answer_2" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_3_answer_3" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_3_answer_4" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/question_4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/imageQuestionViewStyle"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/partitions" />

                    <RadioGroup
                        android:id="@+id/radio_group_question_4"
                        style="@style/radioGroupStyle"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_4_answer_1" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_4_answer_2" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_4_answer_3" />

                        <RadioButton
                            android:id="@+id/question_4_answer_4_correct"
                            style="@style/radioButtonStyle"
                            android:text="@string/question_4_answer_4" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/question_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <ImageView
                style="@style/imageQuestionViewStyle"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:src="@drawable/trout" />

            <RadioGroup
                android:id="@+id/radio_group_question_5"
                style="@style/radioGroupStyle"
                android:layout_weight="1">

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_1" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_2" />

                <RadioButton
                    android:id="@+id/question_5_answer_3_correct"
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_3" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_4" />
            </RadioGroup>
            </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/question_6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/imageQuestionViewStyle"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/bach" />

                    <RadioGroup
                        android:id="@+id/radio_group_question_6"
                        style="@style/radioGroupStyle"
                        android:layout_weight="1">

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_6_answer_1" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_6_answer_2" />

                        <RadioButton
                            android:id="@+id/question_6_answer_3_correct"
                            style="@style/radioButtonStyle"
                            android:text="@string/question_6_answer_3" />

                        <RadioButton
                            style="@style/radioButtonStyle"
                            android:text="@string/question_6_answer_4" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_button_linear_layout_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                style="@style/buttonStyle"
                android:text="@string/submit_button_text"
            android:textColor="@color/colorButtonNormalText"
            android:background="@color/colorButtonNormal" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
